--- a/css/index.html
+++ b/css/index.html
@@ -52,7 +52,7 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img width="370" alt="Людина пише код" src="./images/img1></li>
+          <li><img width="370" alt="Людина пише код" src="./images/imgg.jpg" /></li>
           <li>
             <img width="370" alt="Людина вибирає інтерфейс" src="./images/img2.jpg" />
           </li>
@@ -80,7 +80,7 @@
             <p>Marketing</p>
           </li>
           <li>
-            <img width="270" alt="фото Михайло Єрмаков" src="images/img7.jpg" />
+            <img width="270" alt="фото Михаил Ермаков" src="image/imgg.jpg" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
