--- a/index.html
+++ b/index.html
@@ -8,25 +8,24 @@
     <title>Document</title>
   </head>
   <body>
-    <header class="site-header">
+    <header>
       <a href="index.html" class="WebStudio"><span>WebStudio</span></a>
       <nav>
-        <nav class="site-navigation"></nav>
         <ul>
-          <li><a class="link" href="./index.html">Студія</a></li>
-          <li><a class="link" href="./index.html">Портфоліо</a></li>
-          <li><a class="link" href="./index.html">Контакти</a></li>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./index.html">Портфоліо</a></li>
+          <li><a href="./index.html">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contact-information">
-        <li><a href="mailto:info@devstudio.com" class="link-mail">info@devstudio.com</a></li>
-        <li><a class="link-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section class="title">
+      <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button class="" type="button">Замовити послугу</button>
+        <button type="button">Замовити послугу</button>
       </section>
 
       <section>
@@ -54,13 +53,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <img width="370" alt="Людина пише код" src="./images/img1a.jpg" />
+            <img width="370" alt="Людина пише код" src="./images/imga.jpg" />
           </li>
           <li>
-            <img width="370" alt="Людина вибирає інтерфейс" src="./images/img.jpg" />
+            <img width="370" alt="Людина вибирає інтерфейс" src="./images/imgb.jpg" />
           </li>
           <li>
-            <img width="370" alt="Палітра на екрані девайсу" src="./images/img3.jpg" />
+            <img width="370" alt="Палітра на екрані девайсу" src="./images/imgc.jpg" />
           </li>
         </ul>
       </section>
@@ -68,22 +67,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img width="270" alt="фото Ігор Дем'яненко" src="./images/img4.jpg" />
+            <img width="270" alt="фото Ігор Дем'яненко" src="./images/imgd.jpg" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img width="270" alt="фото Ольга Рєпіна" src="./images/img5.jpg" />
+            <img width="270" alt="фото Ольга Рєпіна" src="./images/imge.jpg" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img width="270" alt="фото Микола Тарасов" src="images/img6.jpg" />
+            <img width="270" alt="фото Микола Тарасов" src="images/imgf.jpg" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img width="270" alt="фото Михайло Єрмаков" src="images/img7.jpg" />
+            <img width="270" alt="фото Михайло Єрмаков" src="images/imgg.jpg" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
