--- a/porfolio.html
+++ b/porfolio.html
@@ -17,8 +17,8 @@
           <li><a href="./index.html">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <ul class="contact-information">
+        <li><a href="mailto:info@devstudio.com" class="link-mail">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
@@ -52,12 +52,14 @@
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
-          <li><img width="370" alt="Людина пише код" src="./images/imgg.jpg" /></li>
           <li>
-            <img width="370" alt="Людина вибирає інтерфейс" src="./images/img2.jpg" />
+            <img width="370" alt="Людина пише код" src="./images/imga.jpg" />
           </li>
           <li>
-            <img width="370" alt="Палітра на екрані девайсу" src="./images/img3.jpg" />
+            <img width="370" alt="Людина вибирає інтерфейс" src="./images/imgb.jpg" />
+          </li>
+          <li>
+            <img width="370" alt="Палітра на екрані девайсу" src="./images/imgc.jpg" />
           </li>
         </ul>
       </section>
@@ -65,22 +67,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img width="270" alt="фото Ігор Дем'яненко" src="./images/img4.jpg" />
+            <img width="270" alt="фото Ігор Дем'яненко" src="./images/imgd.jpg" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img width="270" alt="фото Ольга Рєпіна" src="./images/img5.jpg" />
+            <img width="270" alt="фото Ольга Рєпіна" src="./images/imge.jpg" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img width="270" alt="фото Микола Тарасов" src="images/img6.jpg" />
+            <img width="270" alt="фото Микола Тарасов" src="images/imgf.jpg" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img width="270" alt="фото Михаил Ермаков" src="image/imgg.jpg" />
+            <img width="270" alt="фото Михайло Єрмаков" src="images/imgg.jpg" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
