--- a/portfolio.html
+++ b/portfolio.html
@@ -41,33 +41,59 @@
 
       <section>
         <ul class="images list">
-          <li><img width="370" alt="веб-сайт" src="./images/img8.jpg" /></li>
-          <h3>Тенохряк</h3>
-          <p>Веб-сайт</p>
-          <li><img width="370" alt="дизайн" src="./images/img9.jpg" /></li>
-          <h3>Постер New Orlean vs Golden Star</h3>
-          <p>Дизайн</p>
-          <li><img width="370" alt="додаток" src="./images/img10.jpg" /></li>
-          <h3>Ресторан Seafood</h3>
-          <p>Додаток</p>
-          <li><img width="370" alt="маркетинг" src="./images/img11.jpg" /></li>
-          <h3>Проєкт Prime</h3>
-          <p>Маркетинг</p>
-          <li><img width="370" alt="фото додаток" src="./images/img12.jpg" /></li>
-          <h3>Проєкт Boxes</h3>
-          <p>Додаток</p>
-          <li><img width="370" alt="фото веб-сайт" src="./images/img13.jpg" /></li>
-          <h3>Inspiration has no Borders</h3>
-          <p>Веб-сайт</p>
-          <li><img width="370" alt="фото дизайн" src="./images/img14.jpg" /></li>
-          <h3>Видання Limited Edition</h3>
-          <p>Дизайн</p>
-          <li><img width="370" alt="фото маркетинг" src="images/img15.jpg" /></li>
-          <h3>Проєкт LAB</h3>
-          <p>Маркетинг</p>
-          <li><img width="370" alt="додаток сайт" src="images/img16.jpg" /></li>
-          <h3>Growing Business</h3>
-          <p>Додаток</p>
+          <li>
+            <img width="370" alt="веб-сайт" src="./images/img8.jpg" />
+            <h3>Технохряк</h3>
+            <p>Вебсайт</p>
+          </li>
+
+          <li>
+            <img width="370" alt="дизайн" src="./images/img9.jpg" />
+            <h3>Постер New Orlean vs Golden Star</h3>
+            <p>Дизайн</p>
+          </li>
+
+          <li>
+            <img width="370" alt="додаток" src="./images/img10.jpg" />
+            <h3>Ресторан Seafood</h3>
+            <p>Додаток</p>
+          </li>
+
+          <li>
+            <img width="370" alt="маркетинг" src="./images/img11.jpg" />
+            <h3>Проєкт Prime</h3>
+            <p>Маркетинг</p>
+          </li>
+
+          <li>
+            <img width="370" alt="фото додаток" src="./images/img12.jpg" />
+            <h3>Проєкт Boxes</h3>
+            <p>Додаток</p>
+          </li>
+
+          <li>
+            <img width="370" alt="фото веб-сайт" src="./images/img13.jpg" />
+            <h3>Inspiration has no Borders</h3>
+            <p>Вебсайт</p>
+          </li>
+
+          <li>
+            <img width="370" alt="фото дизайн" src="./images/img14.jpg" />
+            <h3>Видання Limited Edition</h3>
+            <p>Дизайн</p>
+          </li>
+
+          <li>
+            <img width="370" alt="фото маркетинг" src="images/img15.jpg" />
+            <h3>Проєкт LAB</h3>
+            <p>Маркетинг</p>
+          </li>
+
+          <li>
+            <img width="370" alt="додаток сайт" src="images/img16.jpg" />
+            <h3>Growing Business</h3>
+            <p>Додаток</p>
+          </li>
         </ul>
       </section>
     </main>
