--- a/portfolio.html
+++ b/portfolio.html
@@ -31,21 +31,11 @@
     <main>
       <section>
         <ul class="button-list list">
-          <li>
-            <button class="btn" type="button"><h2>>Усі</h2></button>
-          </li>
-          <li>
-            <button class="btn" type="button"><h2>Веб-сайти</h2></button>
-          </li>
-          <li>
-            <button class="btn" type="button"><h2>Додатки</h2></button>
-          </li>
-          <li>
-            <button class="btn" type="button"><h2>Дизайн</h2></button>
-          </li>
-          <li>
-            <button class="btn" type="button"><h2>Маркетинг</h2></button>
-          </li>
+          <li><button class="btn" type="button">Усі</button></li>
+          <li><button class="btn" type="button">Веб-сайти</button></li>
+          <li><button class="btn" type="button">Додатки</button></li>
+          <li><button class="btn" type="button">Дизайн</button></li>
+          <li><button class="btn" type="button">Маркетинг</button></li>
         </ul>
       </section>
 
