--- a/index.html
+++ b/index.html
@@ -1,56 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <header>
-      <a href="index.html" class="WebStudio"><span>WebStudio</span></a>
-      <nav>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="./index.html">Контакти</a></li>
+    <header class="title">
+      <a class="Studio-header" href="index.html"><span class="Web-header">Web</span>Studio</a>
+      <nav class="navigation">
+        <ul class="navigation-header list">
+          <li><a href="./index.html" class="navigation-header-link">Студія</a></li>
+          <li><a href="./portfolio.html" class="navigation-header-link">Портфоліо</a></li>
+          <li><a href="./index.html" class="navigation-header-link">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact list">
+        <li><a class="contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="contact-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <section class="title-slogan">
+        <h1 class="slogan-name">Ефективні рішення для вашого бізнесу</h1>
+        <button class="button-order" type="button">Замовити послугу</button>
       </section>
 
-      <section>
-        <h2>Наш Soft</h2>
-        <ul>
+      <section class="soft-skills">
+        <ul class="soft-skills-list list">
           <li>
-            <h3>Увага до деталей</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <h3 class="soft-skills-item">Увага до деталей</h3>
+            <p class="soft-skills-discription">
+              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+            </p>
           </li>
           <li>
-            <h3>Пунктуальність</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <h3 class="soft-skills-item">Пунктуальність</h3>
+            <p class="soft-skills-discription">
+              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+            </p>
           </li>
           <li>
-            <h3>Планування</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="soft-skills-item">Планування</h3>
+            <p class="soft-skills-discription">
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li>
-            <h3>Сучасні Технології</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <h3 class="soft-skills-item">Сучасні Технології</h3>
+            <p class="soft-skills-discription">
+              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+            </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
+      <section class="image-job">
+        <h2 class="image-job-title">Чим ми займаємося</h2>
+        <ul class="image-list list">
           <li>
             <img width="370" alt="Людина пише код" src="./images/imga.jpg" />
           </li>
@@ -63,37 +71,38 @@
         </ul>
       </section>
       <section>
-        <h2>Наша команда</h2>
-        <ul>
+        <h2 class="image-team">Наша команда</h2>
+        <ul class="image-team-list list">
           <li>
             <img width="270" alt="фото Ігор Дем'яненко" src="./images/imgd.jpg" />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="image-team-name">Ігор Дем'яненко</h3>
+            <p class="image-team-position">Product Designer</p>
           </li>
           <li>
             <img width="270" alt="фото Ольга Рєпіна" src="./images/imge.jpg" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="image-team-name">Ольга Рєпіна</h3>
+            <p class="image-team-position">Frontend Developer</p>
           </li>
           <li>
             <img width="270" alt="фото Микола Тарасов" src="images/imgf.jpg" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="image-team-name">Микола Тарасов</h3>
+            <p class="image-team-position">Marketing</p>
           </li>
           <li>
             <img width="270" alt="фото Михайло Єрмаков" src="images/imgg.jpg" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="image-team-name">Михайло Єрмаков</h3>
+            <p class="image-team-position">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="index.html"><span>WebStudio</span></a>
+    <footer class="site-footer">
+      <a class="Studio" href="index.html"><span class="Web">Web</span>Studio</a>
       <address>
-        <ul>
+        <ul class="contact-information list">
           <li>
             <a
+              class="google-map"
               href="https://goo.gl/maps/xMRnPwp1A4SYm6yV7"
               target="_blank"
               rel="noreferrer noopener"
@@ -101,10 +110,11 @@
               м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a class="contact-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="contact-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
+    </footer>
     </footer>
   </body>
 </html>
