Зробив правки root

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,17 +15,29 @@
   </head>
   <body>
     <header class="title">
-      <a class="Studio-header" href="index.html"><span class="Web-header">Web</span>Studio</a>
+      <a class="Studio-header link-decoration" href="index.html"
+        ><span class="Web-header link-decoration">Web</span>Studio</a
+      >
       <nav class="navigation">
         <ul class="navigation-header list">
-          <li><a href="./index.html" class="navigation-header-link">Студія</a></li>
-          <li><a href="./index.html" class="navigation-header-link">Портфоліо</a></li>
-          <li><a href="./index.html" class="navigation-header-link">Контакти</a></li>
+          <li><a href="./index.html" class="navigation-header-link link-decoration">Студія</a></li>
+          <li>
+            <a href="./index.html" class="navigation-header-link link-decoration">Портфоліо</a>
+          </li>
+          <li>
+            <a href="./index.html" class="navigation-header-link link-decoration">Контакти</a>
+          </li>
         </ul>
       </nav>
       <ul class="contact list">
-        <li><a class="contact-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="contact-mail link-decoration" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact-tel link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
@@ -98,12 +110,14 @@
       </section>
     </main>
     <footer class="site-footer">
-      <a class="Studio" href="index.html"><span class="Web">Web</span>Studio</a>
+      <a class="Studio link-decoration" href="index.html"
+        ><span class="Web link-decoration">Web</span>Studio</a
+      >
       <address>
         <ul class="contact-information list">
           <li>
             <a
-              class="google-map"
+              class="google-map link-decoration"
               href="https://goo.gl/maps/xMRnPwp1A4SYm6yV7"
               target="_blank"
               rel="noreferrer noopener"
@@ -111,8 +125,14 @@
               м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a class="contact-email" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="contact-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="contact-email link-decoration" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-phone link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
