--- a/index.html
+++ b/index.html
@@ -1,28 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-    rel="stylesheet"
-  />
-    <link rel="stylesheet" href="./css/styles.css" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
   <body>
     <header class="title">
-      <a class="Studio-header link-decoration" href="index.html"><span class="Web-header">Web</span>Studio</a>
+      <a class="Studio-header link-decoration" href="index.html"
+        ><span class="Web-header">Web</span>Studio</a
+      >
       <nav class="navigation">
         <ul class="navigation-header list">
-          <li><a href="./index.html" class="navigation-header-link link-decoration">Студія</a></li>
-          <li><a href="./portfolio.html" class="navigation-header-link link-decoration">Портфоліо</a></li>
-          <li><a href="./index.html" class="navigation-header-link link-decoration">Контакти</a></li>
+          <li>
+            <a href="./index.html" class="navigation-header-link link-decoration current">Студія</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" class="navigation-header-link link-decoration">Портфоліо</a>
+          </li>
+          <li>
+            <a href="./index.html" class="navigation-header-link link-decoration">Контакти</a>
+          </li>
         </ul>
       </nav>
       <ul class="contact list">
-        <li><a class="contact-mail link-decoration" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="contact-tel link-decoration" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li>
+          <a class="contact-mail link-decoration" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li>
+          <a class="contact-tel link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <main>
@@ -32,6 +49,7 @@
       </section>
 
       <section class="soft-skills">
+        <h2 class="visually-hidden">Портфоліо</h2>
         <ul class="soft-skills-list list">
           <li>
             <h3 class="soft-skills-item">Увага до деталей</h3>
@@ -100,11 +118,13 @@
       </section>
     </main>
     <footer class="site-footer">
-      <a class="Studio link-decoration" href="index.html"><span class="Web link-decoration">Web</span>Studio</a>
+      <a class="Studio link-decoration" href="index.html"
+        ><span class="Web link-decoration">Web</span>Studio</a
+      >
       <address>
         <ul class="contact-information list">
           <li>
-            <a 
+            <a
               class="google-map link-decoration"
               href="https://goo.gl/maps/xMRnPwp1A4SYm6yV7"
               target="_blank"
@@ -113,8 +133,14 @@
               м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a class="contact-email link-decoration" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="contact-phone link-decoration" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a class="contact-email link-decoration" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-phone link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
