--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -8,9 +11,6 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
@@ -22,7 +22,9 @@
         <ul class="navigation-header list">
           <li><a href="./index.html" class="navigation-header-link link-decoration">Студія</a></li>
           <li>
-            <a href="./index.html" class="navigation-header-link link-decoration">Портфоліо</a>
+            <a href="./index.html" class="navigation-header-link link-decoration current"
+              >Портфоліо</a
+            >
           </li>
           <li>
             <a href="./index.html" class="navigation-header-link link-decoration">Контакти</a>
@@ -55,56 +57,56 @@
         <ul class="images list">
           <li>
             <img width="370" alt="веб-сайт" src="./images/img8.jpg" />
-            <h3>Технохряк</h3>
-            <p>Вебсайт</p>
+            <h3 class="image-name">Технохряк</h3>
+            <p class="image-name-discription">Вебсайт</p>
           </li>
 
           <li>
             <img width="370" alt="дизайн" src="./images/img9.jpg" />
-            <h3>Постер New Orlean vs Golden Star</h3>
-            <p>Дизайн</p>
+            <h3 class="image-name">Постер New Orlean vs Golden Star</h3>
+            <p class="image-name-discription">Дизайн</p>
           </li>
 
           <li>
             <img width="370" alt="додаток" src="./images/img10.jpg" />
-            <h3>Ресторан Seafood</h3>
-            <p>Додаток</p>
+            <h3 class="image-name">Ресторан Seafood</h3>
+            <p class="image-name-discription">Додаток</p>
           </li>
 
           <li>
             <img width="370" alt="маркетинг" src="./images/img11.jpg" />
-            <h3>Проєкт Prime</h3>
-            <p>Маркетинг</p>
+            <h3 class="image-name">Проєкт Prime</h3>
+            <p class="image-name-discription">Маркетинг</p>
           </li>
 
           <li>
             <img width="370" alt="фото додаток" src="./images/img12.jpg" />
-            <h3>Проєкт Boxes</h3>
-            <p>Додаток</p>
+            <h3 class="image-name">Проєкт Boxes</h3>
+            <p class="image-name-discription">Додаток</p>
           </li>
 
           <li>
             <img width="370" alt="фото веб-сайт" src="./images/img13.jpg" />
-            <h3>Inspiration has no Borders</h3>
-            <p>Вебсайт</p>
+            <h3 class="image-name">Inspiration has no Borders</h3>
+            <p class="image-name-discription">Вебсайт</p>
           </li>
 
           <li>
             <img width="370" alt="фото дизайн" src="./images/img14.jpg" />
-            <h3>Видання Limited Edition</h3>
-            <p>Дизайн</p>
+            <h3 class="image-name">Видання Limited Edition</h3>
+            <p class="image-name-discription">Дизайн</p>
           </li>
 
           <li>
             <img width="370" alt="фото маркетинг" src="images/img15.jpg" />
-            <h3>Проєкт LAB</h3>
-            <p>Маркетинг</p>
+            <h3 class="image-name">Проєкт LAB</h3>
+            <p class="image-name-discription">Маркетинг</p>
           </li>
 
           <li>
             <img width="370" alt="додаток сайт" src="images/img16.jpg" />
-            <h3>Growing Business</h3>
-            <p>Додаток</p>
+            <h3 class="image-name">Growing Business</h3>
+            <p class="image-name-discription">Додаток</p>
           </li>
         </ul>
       </section>
