--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,7 @@
     </header>
     <main>
       <section>
+        <h1 class="image-portfolio">Портфоліо</h1>
         <ul class="button-list list">
           <li><button class="btn" type="button">Усі</button></li>
           <li><button class="btn" type="button">Веб-сайти</button></li>
@@ -51,61 +52,58 @@
           <li><button class="btn" type="button">Дизайн</button></li>
           <li><button class="btn" type="button">Маркетинг</button></li>
         </ul>
-      </section>
-
-      <section>
         <ul class="images list">
           <li>
             <img width="370" alt="веб-сайт" src="./images/img8.jpg" />
-            <h3 class="image-name">Технохряк</h3>
+            <h2 class="image-name">Технохряк</h2>
             <p class="image-name-discription">Вебсайт</p>
           </li>
 
           <li>
             <img width="370" alt="дизайн" src="./images/img9.jpg" />
-            <h3 class="image-name">Постер New Orlean vs Golden Star</h3>
+            <h2 class="image-name">Постер New Orlean vs Golden Star</h2>
             <p class="image-name-discription">Дизайн</p>
           </li>
 
           <li>
             <img width="370" alt="додаток" src="./images/img10.jpg" />
-            <h3 class="image-name">Ресторан Seafood</h3>
+            <h2 class="image-name">Ресторан Seafood</h2>
             <p class="image-name-discription">Додаток</p>
           </li>
 
           <li>
             <img width="370" alt="маркетинг" src="./images/img11.jpg" />
-            <h3 class="image-name">Проєкт Prime</h3>
+            <h2 class="image-name">Проєкт Prime</h2>
             <p class="image-name-discription">Маркетинг</p>
           </li>
 
           <li>
             <img width="370" alt="фото додаток" src="./images/img12.jpg" />
-            <h3 class="image-name">Проєкт Boxes</h3>
+            <h2 class="image-name">Проєкт Boxes</h2>
             <p class="image-name-discription">Додаток</p>
           </li>
 
           <li>
             <img width="370" alt="фото веб-сайт" src="./images/img13.jpg" />
-            <h3 class="image-name">Inspiration has no Borders</h3>
-            <p class="image-name-discription">Вебсайт</p>
+            <h2 class="image-name">Inspiration has no Borders</h2>
+            <p class="image-name-discription">Веб-сайт</p>
           </li>
 
           <li>
             <img width="370" alt="фото дизайн" src="./images/img14.jpg" />
-            <h3 class="image-name">Видання Limited Edition</h3>
+            <h2 class="image-name">Видання Limited Edition</h2>
             <p class="image-name-discription">Дизайн</p>
           </li>
 
           <li>
             <img width="370" alt="фото маркетинг" src="images/img15.jpg" />
-            <h3 class="image-name">Проєкт LAB</h3>
+            <h2 class="image-name">Проєкт LAB</h2>
             <p class="image-name-discription">Маркетинг</p>
           </li>
 
           <li>
             <img width="370" alt="додаток сайт" src="images/img16.jpg" />
-            <h3 class="image-name">Growing Business</h3>
+            <h2 class="image-name">Growing Business</h2>
             <p class="image-name-discription">Додаток</p>
           </li>
         </ul>
