--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>Document</title>
+    <title>Портфоліо</title>
   </head>
   <body>
     <header class="title">
@@ -44,7 +44,7 @@
     </header>
     <main>
       <section>
-        <h1 class="image-portfolio">Портфоліо</h1>
+        <h1 class="visually-hidden">Портфоліо</h1>
         <ul class="button-list list">
           <li><button class="btn" type="button">Усі</button></li>
           <li><button class="btn" type="button">Веб-сайти</button></li>
