--- a/portfolio.html
+++ b/portfolio.html
@@ -10,17 +10,26 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Портфоліо</title>
   </head>
   <body>
     <header class="title">
-      <a class="Studio-header link-decoration" href="index.html"
-        ><span class="Web-header link-decoration">Web</span>Studio</a
+      <a class="Studio-header link-decoration" href="index.html">
+        <span class="Web-header link-decoration">Web</span>Studio</a
       >
       <nav class="navigation">
         <ul class="navigation-header list">
-          <li><a href="./index.html" class="navigation-header-link link-decoration">Студія</a></li>
+          <li>
+            <a href="./index.html" class="navigation-header-link link-decoration">Студія</a>
+          </li>
           <li>
             <a href="./index.html" class="navigation-header-link link-decoration current"
               >Портфоліо</a
@@ -31,7 +40,7 @@
           </li>
         </ul>
       </nav>
-      <ul class="contact list">
+      <ul class="contact-list">
         <li>
           <a class="contact-mail link-decoration" href="mailto:info@devstudio.com"
             >info@devstudio.com</a
