--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             </li>
           </ul>
           <ul class="contact list">
-            <li class="navigation-item">
+            <li class="navigation-list">
               <a class="contact-mail link-decoration" href="mailto:info@devstudio.com"
                 >info@devstudio.com</a
               >
             </li>
-            <li class="navigation-item">
+            <li class="navigation-list">
               <a class="contact-tel link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
