--- a/portfolio.html
+++ b/portfolio.html
@@ -22,34 +22,38 @@
   </head>
   <body>
     <header class="title">
-      <a class="Studio-header link-decoration" href="index.html">
-        <span class="Web-header link-decoration">Web</span>Studio</a
-      >
-      <nav class="navigation">
-        <ul class="navigation-header list">
-          <li>
-            <a href="./index.html" class="navigation-header-link link-decoration">Студія</a>
-          </li>
-          <li>
-            <a href="./index.html" class="navigation-header-link link-decoration current"
-              >Портфоліо</a
-            >
-          </li>
-          <li>
-            <a href="./index.html" class="navigation-header-link link-decoration">Контакти</a>
-          </li>
-        </ul>
-      </nav>
-      <ul class="contact-list">
-        <li>
-          <a class="contact-mail link-decoration" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a class="contact-tel link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      <div class="container main-link">
+        <a class="Studio-header link-decoration" href="index.html"
+          ><span class="Web-header">Web</span>Studio</a
+        >
+        <nav class="navigation">
+          <ul class="navigation-header list">
+            <li class="navigation-item">
+              <a href="./index.html" class="navigation-header-link link-decoration current"
+                >Студія</a
+              >
+            </li>
+            <li class="navigation-item">
+              <a href="./portfolio.html" class="navigation-header-link link-decoration"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="navigation-item">
+              <a href="./index.html" class="navigation-header-link link-decoration">Контакти</a>
+            </li>
+          </ul>
+          <ul class="contact list">
+            <li class="navigation-item">
+              <a class="contact-mail link-decoration" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="navigation-item">
+              <a class="contact-tel link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
       <section>
