--- a/index.html
+++ b/index.html
@@ -57,105 +57,117 @@
     </header>
     <main>
       <section class="title-slogan">
-        <h1 class="slogan-name">Ефективні рішення для вашого бізнесу</h1>
-        <button class="button-order" type="button">Замовити послугу</button>
+        <div class="container">
+          <h1 class="slogan-name">Ефективні рішення для вашого бізнесу</h1>
+          <button class="button-order" type="button">Замовити послугу</button>
+        </div>
       </section>
 
       <section class="soft-skills">
-        <h2 class="visually-hidden">Портфоліо</h2>
-        <ul class="soft-skills-list list">
-          <li>
-            <h3 class="soft-skills-item">Увага до деталей</h3>
-            <p class="soft-skills-discription">
-              Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3 class="soft-skills-item">Пунктуальність</h3>
-            <p class="soft-skills-discription">
-              Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
-            </p>
-          </li>
-          <li>
-            <h3 class="soft-skills-item">Планування</h3>
-            <p class="soft-skills-discription">
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3 class="soft-skills-item">Сучасні Технології</h3>
-            <p class="soft-skills-discription">
-              Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Портфоліо</h2>
+          <ul class="soft-skills-list list">
+            <li class="item">
+              <h3 class="soft-skills-item">Увага до деталей</h3>
+              <p class="soft-skills-discription">
+                Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="soft-skills-item">Пунктуальність</h3>
+              <p class="soft-skills-discription">
+                Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="soft-skills-item">Планування</h3>
+              <p class="soft-skills-discription">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="item">
+              <h3 class="soft-skills-item">Сучасні Технології</h3>
+              <p class="soft-skills-discription">
+                Значимість цих проблем настільки очевидна, що реалізація планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="image-job">
-        <h2 class="image-job-title">Чим ми займаємося</h2>
-        <ul class="image-list list">
-          <li>
-            <img width="370" alt="Людина пише код" src="./images/imga.jpg" />
-          </li>
-          <li>
-            <img width="370" alt="Людина вибирає інтерфейс" src="./images/imgb.jpg" />
-          </li>
-          <li>
-            <img width="370" alt="Палітра на екрані девайсу" src="./images/imgc.jpg" />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="image-job-title">Чим ми займаємося</h2>
+          <ul class="image-list list">
+            <li>
+              <img width="370" alt="Людина пише код" src="./images/imga.jpg" />
+            </li>
+            <li>
+              <img width="370" alt="Людина вибирає інтерфейс" src="./images/imgb.jpg" />
+            </li>
+            <li>
+              <img width="370" alt="Палітра на екрані девайсу" src="./images/imgc.jpg" />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="image-background">
-        <h2 class="image-team">Наша команда</h2>
-        <ul class="image-team-list list">
-          <li>
-            <img width="270" alt="фото Ігор Дем'яненко" src="./images/imgd.jpg" />
-            <h3 class="image-team-name">Ігор Дем'яненко</h3>
-            <p class="image-team-position">Product Designer</p>
-          </li>
-          <li>
-            <img width="270" alt="фото Ольга Рєпіна" src="./images/imge.jpg" />
-            <h3 class="image-team-name">Ольга Рєпіна</h3>
-            <p class="image-team-position">Frontend Developer</p>
-          </li>
-          <li>
-            <img width="270" alt="фото Микола Тарасов" src="images/imgf.jpg" />
-            <h3 class="image-team-name">Микола Тарасов</h3>
-            <p class="image-team-position">Marketing</p>
-          </li>
-          <li>
-            <img width="270" alt="фото Михайло Єрмаков" src="images/imgg.jpg" />
-            <h3 class="image-team-name">Михайло Єрмаков</h3>
-            <p class="image-team-position">UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="image-team">Наша команда</h2>
+          <ul class="image-team-list list">
+            <li>
+              <img width="270" alt="фото Ігор Дем'яненко" src="./images/imgd.jpg" />
+              <h3 class="image-team-name">Ігор Дем'яненко</h3>
+              <p class="image-team-position">Product Designer</p>
+            </li>
+            <li>
+              <img width="270" alt="фото Ольга Рєпіна" src="./images/imge.jpg" />
+              <h3 class="image-team-name">Ольга Рєпіна</h3>
+              <p class="image-team-position">Frontend Developer</p>
+            </li>
+            <li>
+              <img width="270" alt="фото Микола Тарасов" src="images/imgf.jpg" />
+              <h3 class="image-team-name">Микола Тарасов</h3>
+              <p class="image-team-position">Marketing</p>
+            </li>
+            <li>
+              <img width="270" alt="фото Михайло Єрмаков" src="images/imgg.jpg" />
+              <h3 class="image-team-name">Михайло Єрмаков</h3>
+              <p class="image-team-position">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer class="site-footer">
-      <a class="Studio link-decoration" href="index.html"
-        ><span class="Web link-decoration">Web</span>Studio</a
-      >
-      <address>
-        <ul class="contact-information list">
-          <li>
-            <a
-              class="google-map link-decoration"
-              href="https://goo.gl/maps/xMRnPwp1A4SYm6yV7"
-              target="_blank"
-              rel="noreferrer noopener"
-            >
-              м. Київ, пр-т Лесі Українки, 26</a
-            >
-          </li>
-          <li>
-            <a class="contact-email link-decoration" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a class="contact-phone link-decoration" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a class="Studio link-decoration" href="index.html"
+          ><span class="Web link-decoration">Web</span>Studio</a
+        >
+        <address>
+          <ul class="contact-information list">
+            <li>
+              <a
+                class="google-map link-decoration"
+                href="https://goo.gl/maps/xMRnPwp1A4SYm6yV7"
+                target="_blank"
+                rel="noreferrer noopener"
+              >
+                м. Київ, пр-т Лесі Українки, 26</a
+              >
+            </li>
+            <li>
+              <a class="contact-email link-decoration" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-phone link-decoration" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
